# YoloV7-ncnn-Raspberry-Pi-4

./: .gitignore  CMakeLists.txt  yolo.cpp  yolov7main.cpp
Docker/: Dockerfile
